# Drissionpage-MCP-Server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  REVIEW_REPORT.md  SECURITY.md  codecov.yml  install.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  workflow-lint.yml
benchmark-results/: 0.7.2-task-completion.json
docs/: compatibility.md  release-checklist.md  tool-contract.md  troubleshooting.md
docs/skills/: README.md
docs/skills/coverage-quality/: SKILL.md
docs/skills/mcp-client-docs/: SKILL.md
docs/skills/mcp-error-contracts/: SKILL.md
docs/skills/release-metadata/: SKILL.md
drissionpage_mcp/: __init__.py  cli.py  compat.py  context.py  doctor.py  env.py  errors.py  forms.py  frame_payload.py  guidance.py  limits.py  metadata.py  network_payload.py  observation.py  outline.py  page_scripts.py  policy.py  prompts.py  resources.py  response.py  response_errors.py  response_media.py  response_schemas.py  runtime.py  selector.py  server.py  tab.py  tool_outputs.py
drissionpage_mcp/browser/: __init__.py  _scripts.py  dialogs.py  downloads.py  elements.py  form_inspection_scripts.py  form_scripts.py  frames.py  interaction.py  motion.py  navigation.py  network.py  observation.py  page.py  page_state_scripts.py  pointer.py  script_fragments.py  storage.py  targeting.py  vision.py  waits.py  workflows.py
drissionpage_mcp/tools/: __init__.py  _observe.py  base.py  common.py  debug.py  dialogs.py  downloads.py  element.py  files.py  forms.py  frame.py  interaction.py  navigate.py  network.py  pointer.py  shadow.py  storage.py  tabs.py  vision.py  wait.py  workflow.py
examples/: README.md  claude-desktop-config.json  codex-config.toml  codex-source-config.toml
playground/: README.md  __init__.py  local_test.py  quick_start.py  run_mcp_lab.py
playground/mcp_lab/: __init__.py  runner.py  server.py
playground/test_scenarios/: basic_navigation.py  data_extraction.py  form_interaction.py
src/: __init__.py  cli.py  context.py  response.py  server.py  tab.py
src/tools/: __init__.py  base.py  common.py  element.py  navigate.py  wait.py
tests/: test_browser_capability_boundaries.py  test_browser_integration.py  test_ci_workflow.py  test_cli.py  test_compat.py  test_context.py  test_dialog_click_capabilities.py  test_doctor.py  test_download_capabilities.py  test_env_helpers.py  test_frame_payload.py  test_mcp_prompts.py  test_mcp_protocol.py  test_mcp_resources.py  test_network_payload.py  test_observation.py  test_outline.py  test_page_scripts.py  test_playground_mcp_lab.py  test_pointer.py  test_pointer_tools.py  test_release_metadata.py  test_response_contract.py  test_security_policy.py  test_selector.py  test_server.py  test_tab.py  test_targeting.py  test_task_runtime_contracts.py  test_tool_schema_snapshot.py  test_tool_success_paths.py  test_tools.py  test_vision.py  test_workflow_inputs.py
tests/evals/: README.md  __init__.py  task_completion_benchmark.py  test_eval_page_understanding.py  test_eval_protocol_contracts.py  test_eval_task_completion.py
tests/fixtures/: __init__.py  http_fixture.py
tests/snapshots/: tools_schema.json
