[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drissionpage-mcp"
version = "0.4.1"
description = "Professional browser automation for Codex, Claude Code, and MCP clients powered by DrissionPage"
authors = [
    { name = "Wukunyun", email = "864353360@qq.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "codex",
    "claude",
    "drissionpage",
    "browser-automation",
    "web-scraping",
    "llm-tools",
    "ai-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "DrissionPage>=4.1.1.4,<5",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "ruff>=0.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jumodada/Drissionpage-MCP-Server"
Documentation = "https://github.com/jumodada/Drissionpage-MCP-Server#readme"
Repository = "https://github.com/jumodada/Drissionpage-MCP-Server"
Issues = "https://github.com/jumodada/Drissionpage-MCP-Server/issues"
Changelog = "https://github.com/jumodada/Drissionpage-MCP-Server/blob/main/CHANGELOG.md"

[project.scripts]
drissionpage-mcp = "drissionpage_mcp.cli:main"

[tool.setuptools]
packages = ["drissionpage_mcp", "drissionpage_mcp.tools"]

[tool.setuptools.package-data]
drissionpage_mcp = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "DrissionPage.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["drissionpage_mcp"]
omit = [
    "*/tests/*",
    "*/playground/*",
]

[tool.coverage.report]
fail_under = 75
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.xml]
output = "coverage.xml"
